added clear button

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     </fieldset>
     <article id="button_container">
       <button type="button" id="save_button">Save Entry</button>
-      <button type="button" id="show_button">Show Entries</button>
+      <button type="button" id="show_button">Show All Entries</button>
 
     </article>
     <section id="radio_buttons">
