added search function

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,8 @@
     <article id="button_container">
       <button type="button" id="save_button">Save Entry</button>
       <button type="button" id="show_button">Show All Entries</button>
+      <input type="text" id="search_input">
+      <button type="button" id="search_button">Search Entries</button>
 
     </article>
     <section id="radio_buttons">
